Game Mata Mosquito

--- a/Curso JavaScript/Exercícios/Timer/index.html
+++ b/Curso JavaScript/Exercícios/Timer/index.html
@@ -11,10 +11,14 @@
     
 <section>
         <h2>Meu Timer</h2>
-        <h1 class="relogio">00:00:00</h1>
+        <h1 id="relogio">
+            <div id="hora">00:</div>
+            <div id="minuto">00:</div>
+            <div id="segundo">00</div>
+        </h1>
 
         <p>
-            <button class="iniciar">Iniciar</button><button class="pausar">Pausar</button><button class="zerar">Zerar</button>
+            <button id="iniciar">Iniciar</button><button id="pausar">Pausar</button><button id="zerar">Zerar</button>
         </p>
 </section>
 
