--- a/Curso Desenvolvimento Web/Projetos/JavaScript/App Mata-Mosquito/jogoIniciado.html
+++ b/Curso Desenvolvimento Web/Projetos/JavaScript/App Mata-Mosquito/jogoIniciado.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="jogo.js"></script>
-    <title>Document</title>
+    <title>Mata Mosquito</title>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo()">
 
@@ -17,7 +17,7 @@
         <img id="img3" src="imagens/coracao_cheio.png" alt="">
     </div>
     <div id="blocoB">
-        <p>Tempo Restante:</p><p id="segundos">00</p>
+        <p>Tempo Restante:</p><p id="segundos">99</p>
     </div>
 </div>
     
