--- a/Curso Desenvolvimento Web/Projetos/JavaScript/App Mata-Mosquito/vitoria.html
+++ b/Curso Desenvolvimento Web/Projetos/JavaScript/App Mata-Mosquito/vitoria.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Mata Mosquito</title>
 </head>
-<body id="gameOver" >
+<body id="vitoria" >
 
     <div id="id">
-        <img src="imagens/game_over.png" alt="">
+        <img src="imagens/vitoria.png" alt="">
         <button id="reiniciar" onclick="reset()">Reiniciar</button>
         
     </div>
