--- a/Curso Desenvolvimento Web/Projetos/JavaScript/App Mata-Mosquito/index.html
+++ b/Curso Desenvolvimento Web/Projetos/JavaScript/App Mata-Mosquito/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Mata Mosquito</title>
     <script>
         function play(){
             let level = document.getElementById('nivel').value
             window.location.href = 'jogoiniciado.html?' + level
+            if ( level = ''){
+                alert('Insira um nível válido')
+                window.location.href = 'index.html'
+            }
             console.log(level)
         }
 
